--- a/index.html
+++ b/index.html
@@ -24,34 +24,34 @@
 		<div id="wrap">
 			<div id="text">
 				<div id="code">
-					<span class="say">我的爱人，我会牵着你的手，走到满头白发的那一天，</span><br>
-					<span class="say">我会守护你生命里的精彩，并陪伴你一路精彩下去。</span><br>
-					<span class="say">你的幸福快乐，是我一生的追求。</span><br>
-					<span class="say">我会每一天带着笑脸，和你说早安，</span><br>
-					<span class="say">我会每一晚与你道声晚安再入梦乡，</span><br>
-					<span class="say">我会带你去所有你想去的地方，</span><br>
-					<span class="say">陪你闹看你笑</span><br>
-					<span class="say">历经你生命中所有的点点滴滴。</span><br>
-					<span class="say">我期待这一生与你一起走过，</span><br>
-					<span class="say">我期待与你慢慢变老</span><br>
-					<span class="say">等我们老到哪儿也去不了，</span><br>
-					<span class="say">还能满载着一生的幸福快乐 ！</span><br>
-					<br>
-					<span class="say">我会为我们的未来撑起一片天空，</span><br>
-					<span class="say">为我们的将来担负起一生的责任，</span><br>
-					<span class="say">愿意为你去做每一件能让你开心快乐的事。</span><br>
-					<span class="say">所有我们经历的点点滴滴，</span><br>
-					<span class="say">都是我们一辈子最美的回忆。</span><br>
-					<span class="say">我愿意爱你直到老去！</span><br>
+					<span class="say">*******************************************************</span><br>
+					<span class="say">**谁决定我的去留，有那来自远方的呼唤。*******</span><br>
+					<span class="say">**相约扬州行的背后，是一场早已注定地逃离。**</span><br>
+					<span class="say">**把车留下，把门上的钥匙的留下，***************</span><br>
+					<span class="say">**把那些陈旧、发霉的衣物留下，*****************</span><br>
+					<span class="say">**把一切牢骚，不堪的回忆留下，****************</span><br>
+					<span class="say">**甚至把亲情留下，就让愚昧的世俗偏见，********</span><br>
+					<span class="say">**随风而逝吧。**************************************</span><br>
+					<span class="say">**<span class="space"></span>--2024年3月12日晚</span><br>
+					<span class="say">*******************************************************</span><br>
+					<span class="say">**《我俩的猫，变胖了》****************************</span><br>
+					<span class="say">**半年来的每一天，多了一份特别的期待。*******</span><br>
+					<span class="say">**就是那份独属怀抱里的安逸。********************</span><br>
+					<span class="say">**或许，我从未想过有一天，***********************</span><br>
+					<span class="say">**自己会如此地贪婪。******************************</span><br>
+					<span class="say">**早上醒来，睁开眼睛。猫咪轻倚于我的胳臂上**</span><br>
+					<span class="say">**小动物毫无保留信任的背后，********************</span><br>
+					<span class="say">**尽是老婆一切的爱。******************************</span><br>
+					<span class="say">*******************************************************</span><br>
 					<br>
 					<span class="say"><span class="space"></span> -- Yours, Gong.</span>
 				</div>
 			</div>
 			<div id="clock-box">
 				<a href="" target="_blank"><b>Li Jin</b></a>
-				与
+				&
 				<a href="" target="_blank"><b>Gong</b></a>
-				在一起的
+				相遇、相知、相伴第
 				<div id="clock"></div>
 			</div>
 			<canvas id="canvas" width="1100" height="680"></canvas>
