--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<span class="say">*******************************************************</span><br>
 					<span class="say">**谁决定我的去留，有那来自远方的呼唤。*******</span><br>
 					<span class="say">**相约扬州行的背后，是一场早已注定地逃离。**</span><br>
-					<span class="say">**把车留下，把门上的钥匙的留下，***************</span><br>
+					<span class="say">**把车留下，把门上的钥匙留下，***************</span><br>
 					<span class="say">**把那些陈旧、发霉的衣物留下，*****************</span><br>
 					<span class="say">**把一切牢骚，不堪的回忆留下，****************</span><br>
 					<span class="say">**甚至把亲情留下，就让愚昧的世俗偏见，********</span><br>
@@ -51,7 +51,7 @@
 				<a href="" target="_blank"><b>Li Jin</b></a>
 				&
 				<a href="" target="_blank"><b>Gong</b></a>
-				相遇、相知、相伴第
+				相遇、相知、相伴
 				<div id="clock"></div>
 			</div>
 			<canvas id="canvas" width="1100" height="680"></canvas>
